# lvgl-esp32-port

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  idf_component.yml  main.c  process_x.c  process_x.h  tft_display.c  tft_display.h  touch_ft6236.c  touch_ft6236.h
main/lvgl_src/: sample.c  sample.h  send_receive_proc_x.c  send_receive_proc_x.h
